# web-rust

./: Cargo.toml  Dockerfile
scripts/: init_db.sh
src/: configuration.rs  main.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
