[package]
name = "web_rust_prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_rust_prod"

[dependencies]
actix-web = "4"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.1"
uuid = { version="1.5.0", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.9"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
claim = "0.5.0"
fake = "2.9.1"